0.4.2
    - Spurious NAMES replies will not get into the recall buffer now
    - Migrated Makefile.PL over to Module::Install

0.4.1 Tue Sep 30 19:23:43 GMT 2008
    - Fixed a serious typo
    - Some pod updates

0.4.0 Tue Sep 30 17:00:29 GMT 2008
    - Don't forward PING/PONG server messages
    - Generate various server replies without contacting the server.
      As a consequence, it should use less traffic and be snappier,
      especially when many/large/busy channels are involved.
    - Added away_poll config option

0.3.3 Sun Sep 28 04:21:50 GMT 2008
    - Fixed crash on client disconnect

0.3.2 Wed Sep 24 20:10:19 GMT 2008
    - Fix race condition related to CAPAB IDENTIFY-MSG
    - Use less CPU while attaching when recall mode is 'all'

0.3.1 Wed Sep 24 19:06:09 GMT 2008
    - Fix bug in recall due to wrong string interpolation
    - More pod improvements
    - More sanity checks on the config file

0.3.0 Wed Sep 24 00:17:00 GMT 2008
    - Handle the CAPAB IDENTIFY-MSG feature smoothly
    - Make recall keep track of channel topic changes
    - Remove a debugging print statement, doh
    - Should detach from the terminal now when not using --debug
    - Moved 'bondage' from bin/ to script/ since it's not a binary
    - Prettified some of the pod
    - Exit cleanly upon getting SIGINT when clients are attached
    - Fix bug in 99-test-pod.t
    - Create the logs/ dir on demand

0.2.5 Tue Mar 11 01:42:08 GMT 2008
    - Fix PM recalling
    - Enable plugin_debug in PoCo::IRC when debugging
    - A few pod fixes
    - Fix MANIFEST

0.2.4 Mon Feb 11 04:33:05 GMT 2008
    - Fix topic recalling
    - Add log_rotate/log_sortbydate
    - Move channel cycling to POE::Component::IRC
    - Use Config::Any instead of YAML::Syck
    - Exit (almost) cleanly when sent TERM/INT signals
    - Rename auto_cycle option to cycle_empty

0.2.3 Wed Jan 30 05:01:30 GMT 2008
    - Fix silly versioning blunder

0.2.2 Wed Jan 30 04:18:26 GMT 2008
    - Reorganized pod