@@ -15,7 +15,7 @@ requires       ('POE::Component::Client::DNS' => '0.99');
 requires       ('POE::Component::Daemon'      => '0');
 requires       ('POE::Component::IRC'         => '6.06');
 requires       ('POE::Filter::IRCD'           => '2.34');
-requires       ('Config::Any'                 => '0.11');
+requires       ('YAML::XS'                    => '0');
 requires       ('Tie::File'                   => '0');
 requires       ('Digest::MD5'                 => '0');
 test_requires  ('Test::More'                  => '0');
